# AITGPT-APP

./: .gitignore  README.md  SAMPLE_LOGINS.md
Backend/: .env.example  .gitignore  BACKEND_MIGRATION_STATUS.md  Dockerfile  django_manage.py  docker-compose.db.yml  local.env  pyproject.toml  startup.sh
Backend/.devcontainer/dev/: .env  devcontainer-lock.json
Backend/core/: urls.py
Backend/src/Backend/: .dockerignore  .gitignore  docker-compose.web.yml  requirements.txt  seed-users.sh  startup.sh
Backend/src/Backend/core/: admin.py
Backend/src/Backend/core/migrations/: 0001_initial.py
Backend/src/core/: exceptions.py  middleware.py  models.py  serializers.py  settings.py  utils.py  views.py
Backend/src/django_core/: settings.py  urls.py
Backend/src/tasks/: admin.py  models.py  serializers.py  views.py
Backend/src/tasks/management/commands/: README.md
Backend/src/tasks/migrations/: 0001_initial.py  0002_chatlog_final_metrics.py  0003_alter_chatlog_generated_answer_and_more.py
Backend/tasks/: urls.py
Backend/tasks/management/commands/: README.md  seed_users.py
Frontend/: .dockerignore  Dockerfile  docker-compose.yml  index.html  package.json  startup.sh
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/: AITWebsite.tsx  AuthModal.tsx  ChatInterface.tsx  FeesTabContent.tsx  FloatingAuthModal.tsx  FloatingChatButton.tsx  FloatingChatWidget.tsx  FloatingLoadingScreen.tsx  FloatingOwlSplash.tsx  FloatingUserTypeSelection.tsx  FloatingWelcomeCard.tsx  FormattedMessageContent.tsx  LoadingScreen.tsx  OwlMascot.tsx  SSOLoginPage.tsx  (+3 more)
(+13 files in other folders)
