[project]
name = "aitgpt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.0.1",
    "django-cors-headers==4.3.1",
    "django-extensions==3.2.3",
    "django-ratelimit==4.1.0",
    "djangorestframework==3.14.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "uvicorn[standard]==0.27.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "ipykernel>=6.30.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
]

